Fixed up URLs and copyright notice

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@ and OFF file formats.</p>
 <h3>Usage Examples</h3>
 <p>The sources to all examples are also bundled with the OpenSCAD source
 distribution and can be checked out from or browsed online in the <a
-href="http://svn.clifford.at/openscad/trunk/examples/">OpenSCAD
-Subversion Repository</a>.</p>
+href="https://github.com/openscad/openscad/tree/master/examples">OpenSCAD github Repository</a>.</p>
 <p align="center"><img src="example1.png"/></p>
 <p align="center"><img src="example2.png"/></p>
 
@@ -53,21 +52,21 @@ Subversion Repository</a>.</p>
 <h3>Licence</h3>
 OpenSCAD is <a href="http://en.wikipedia.org/wiki/Free_Software">Free
 Software</a> under the terms of the <a
-href="http://svn.clifford.at/openscad/trunk/COPYING">GNU GENERAL PUBLIC LICENSE
+href="https://github.com/openscad/openscad/tree/master/COPYING">GNU GENERAL PUBLIC LICENSE
 Version 2</a>.
 
 <h3>Download Releases</h3>
 <p><ul>
 <li style="padding-bottom:0.5em">Latest source release:<br/>
-	<a href="download/openscad-2010.05.src.tar.gz">openscad-2010.05.src.tar.gz</a></li>
+	<a href="http://openscad.googlecode.com/files/openscad-2010.05.src.tar.gz">openscad-2010.05.src.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Linux x86 binaries:<br/>
-	<a href="download/openscad-2010.05.linux-x86.tar.gz">openscad-2010.05.linux-x86.tar.gz</a></li>
+	<a href="http://openscad.googlecode.com/files/openscad-2010.05.linux-x86.tar.gz">openscad-2010.05.linux-x86.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled OS X binaries:<br/>
-	<a href="download/openscad-2010.05.dmg">openscad-2010.05.dmg</a></li>
+	<a href="http://openscad.googlecode.com/files/openscad-2010.05.dmg">openscad-2010.05.dmg</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows binaries:<br/>
-	<a href="download/openscad-2010.05.win32.zip">openscad-2010.05.win32.zip</a></li>
+	<a href="http://openscad.googlecode.com/files/openscad-2010.05.win32.zip">openscad-2010.05.win32.zip</a></li>
 <li style="padding-bottom:0.5em">Browse current and older releases:<br/>
-	<a href="download/">Direct link to download directory</a></li>
+	<a href="http://code.google.com/p/openscad/downloads">Direct link to download directory</a></li>
 </ul></p>
 
 <h3>Download Development Snapshots</h3>
@@ -78,7 +77,7 @@ Version 2</a>.
 <li style="padding-bottom:0.5em">Development snapshot Win32 binaries:<br/>
 	<a href="http://meta23.net/openscad/">Directory Index</a></li>
 <li style="padding-bottom:0.5em">Latest development sources:<br/>
-	<a href="http://svn.clifford.at/openscad/trunk">Subversion Trunk</a></li>
+	<a href="github.com/openscad/openscad">Project on github</a></li>
 </ul></p>
 
 <h3>Download OpenSCAD Designs</h3>
@@ -87,7 +86,7 @@ Version 2</a>.
 <li style="padding-bottom:0.5em">OpenSCAD Designs on Thingiverse:<br/>
 	<a href="http://www.thingiverse.com/tag:openscad">Things tagged with 'OpenSCAD'</a>
 <li style="padding-bottom:0.5em">Example Designs from OpenSCAD sources:<br/>
-	<a href="http://svn.clifford.at/openscad/trunk/examples/">Examples Directory in Subversion Trunk</a></li>
+	<a href="https://github.com/openscad/openscad/tree/master/examples">Examples Directory in git repository</a></li>
 </ul></p>
 
 <h3>Build dependencies</h3>
@@ -120,10 +119,10 @@ running.</p>
 <p>We have a mailing list. You can subscribe to the list or browse the list archives <a href="http://rocklinux.net/mailman/listinfo/openscad">here</a>.</p>
 
 <h3>See also</h3>
-<p>Have a look <a href="http://www.google.at/search?q=openscad+-%22Open+CAD%22+-%22Opens+CAD%22">what Google has about OpenSCAD</a>.</p>
+<p>Have a look <a href="http://www.google.com/search?q=openscad+-%22Open+CAD%22+-%22Opens+CAD%22">what Google has about OpenSCAD</a>.</p>
 
 <h3>Author</h3>
-<p>OpenSCAD has been written by <a href="http://www.clifford.at/">Clifford Wolf</a>.</p>
+<p>OpenSCAD has been written by <a href="http://www.clifford.at/">Clifford Wolf</a> and <a href="mailto:marius@kintel.net">Marius Kintel</a></p>
 
 </body></html>
 
