Testing github downloads

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@ Version 2</a>.
 <h3>Download Releases</h3>
 <p><ul>
 <li style="padding-bottom:0.5em">Latest source release:<br/>
-	<a href="http://openscad.googlecode.com/files/openscad-2010.05.src.tar.gz">openscad-2010.05.src.tar.gz</a></li>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.src.tar.gz">openscad-2010.05.src.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Linux x86 binaries:<br/>
-	<a href="http://openscad.googlecode.com/files/openscad-2010.05.linux-x86.tar.gz">openscad-2010.05.linux-x86.tar.gz</a></li>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.linux-x86.tar.gz">openscad-2010.05.linux-x86.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled OS X binaries:<br/>
-	<a href="http://openscad.googlecode.com/files/openscad-2010.05.dmg">openscad-2010.05.dmg</a></li>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.dmg">openscad-2010.05.dmg</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows binaries:<br/>
-	<a href="http://openscad.googlecode.com/files/openscad-2010.05.win32.zip">openscad-2010.05.win32.zip</a></li>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.win32.zip">openscad-2010.05.win32.zip</a></li>
 <li style="padding-bottom:0.5em">Browse current and older releases:<br/>
-	<a href="http://code.google.com/p/openscad/downloads">Direct link to download directory</a></li>
+	<a href="https://github.com/openscad/openscad/downloads">Direct link to download directory</a></li>
 </ul></p>
 
 <h3>Download Development Snapshots</h3>
