Testing out flattr

--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html><head><meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 <title>OpenSCAD - The Programmers Solid 3D CAD Modeller</title>
-<style type="text/css"><!--
+<script type="text/javascript">
+/* <![CDATA[ */
+    (function() {
+        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+        t.parentNode.insertBefore(s, t);
+    })();
+/* ]]> */
+</script>
+<style type="text/css">
+  div.topright {
+    position:absolute;
+    top:5px;
+    right:5px;
+  }
+<!--
 .prototype {
 	padding-left:2em;
 	font-size:larger;
 	font-weight:bolder;
 	font-family:monospace;
 }
---></style>
+-->
+</style>
 </head><body>
+
+<div class="topright">
+<a class="FlattrButton" style="display:none;" rev="flattr" href="http://openscad.org"></a>
+</div>
 
 <h1>OpenSCAD - The Programmers Solid 3D CAD Modeller</h1>
 
