Fixed "Project on github" link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Version 2</a>.
 <li style="padding-bottom:0.5em">Development snapshot Win32 binaries:<br/>
 	<a href="http://meta23.net/openscad/">Directory Index</a></li>
 <li style="padding-bottom:0.5em">Latest development sources:<br/>
-	<a href="github.com/openscad/openscad">Project on github</a></li>
+	<a href="http://github.com/openscad/openscad">Project on github</a></li>
 </ul></p>
 
 <h3>Download OpenSCAD Designs</h3>
