added install instructions for ubuntu (but commented out)
I just tested installing on 10.4 LTS 64bit and it segfaults on startup)

--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@ Software</a> under the terms of the <a
 href="https://github.com/openscad/openscad/tree/master/COPYING">GNU GENERAL PUBLIC LICENSE
 Version 2</a>.
 
+<!--
+<h3>Installing on Ubuntu/Kubuntu</h3>
+
+There is a PPA (private package archive) for OpenSCAD that is maintained
+by <a href="https://launchpad.net/~chrysn">chrysn</a>. So installing OpenSCAD
+on Ubuntu/Kubuntu boils down to running the following commands:
+
+<pre style="background-color: #aaa; padding:1em; margin-left:4em; margin-right:4em;">
+$ sudo add-apt-repository ppa:chrysn/openscad
+$ sudo apt-get update
+$ sudo apt-get install openscad
+</pre> -->
+
 <h3>Download Releases</h3>
 <p><ul>
 <li style="padding-bottom:0.5em">Latest source release:<br/>
