Removed comment markers for ubuntu/kubuntu instructions
..it seams like the problem I've seen before is a local issue
to one of my 64bit workstations.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@ Software</a> under the terms of the <a
 href="https://github.com/openscad/openscad/tree/master/COPYING">GNU GENERAL PUBLIC LICENSE
 Version 2</a>.
 
-<!--
 <h3>Installing on Ubuntu/Kubuntu</h3>
 
 There is a PPA (private package archive) for OpenSCAD that is maintained
@@ -88,7 +87,7 @@ on Ubuntu/Kubuntu boils down to running the following commands:
 $ sudo add-apt-repository ppa:chrysn/openscad
 $ sudo apt-get update
 $ sudo apt-get install openscad
-</pre> -->
+</pre>
 
 <h3>Download Releases</h3>
 <p><ul>
