fixed wrong link to Qt4

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Version 2</a>.
 </ul></p>
 
 <h3>Build dependencies</h3>
-<p>OpenSCAD is using the <a href="http://www.qtsoftware.com/">Qt4</a>, the <a
+<p>OpenSCAD is using the <a href="http://qt.nokia.com/">Qt4</a>, the <a
 href="http://www.opencsg.org/">OpenCSG library</a> and the <a
 href="http://www.cgal.org/">CGAL library</a>. This libraries are bundled with
 the pre compiled binaries. In addition to this libaries a GNU C compiler, the
