Updated version to 2011.04

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h3>About OpenSCAD</h3>
 
 <p>OpenSCAD is a software for creating solid 3D CAD objects. It is free
-software and available for Linux/UNIX, MS Windows and Apples OS X.</p>
+software and available for Linux/UNIX, MS Windows and Mac OS X.</p>
 
 <p>Unlike most free software for creating 3D models (such as the famous
 application <a href="http://en.wikipedia.org/wiki/Blender_%28software%29">Blender</a>)
@@ -92,13 +92,15 @@ $ sudo apt-get install openscad
 <h3>Download Releases</h3>
 <p><ul>
 <li style="padding-bottom:0.5em">Latest source release:<br/>
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.src.tar.gz">openscad-2010.05.src.tar.gz</a></li>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.src.tar.gz">openscad-2011.04.src.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Linux x86 binaries:<br/>
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.linux-x86.tar.gz">openscad-2010.05.linux-x86.tar.gz</a></li>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.linux-x86.tar.gz">openscad-2011.04.linux-x86.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled OS X binaries:<br/>
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.dmg">openscad-2010.05.dmg</a></li>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.dmg">openscad-2011.04.dmg</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows binaries:<br/>
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.win32.zip">openscad-2010.05.win32.zip</a></li>
+Not Yet Available. Previous version: 
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.win32.zip">openscad-2010.05.win32.zip</a>
+</li>
 <li style="padding-bottom:0.5em">Browse current and older releases:<br/>
 	<a href="https://github.com/openscad/openscad/downloads">Direct link to download directory</a></li>
 </ul></p>
