--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@ $ sudo apt-get install openscad
 	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.src.tar.gz">openscad-2011.04.src.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Linux x86 binaries:<br/>
 	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.linux-x86.tar.gz">openscad-2011.04.linux-x86.tar.gz</a></li>
+<li style="padding-bottom:0.5em">Latest pre compiled Linux x64 binaries:<br/>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.linux-x64.tar.gz">openscad-2011.04.linux-x64.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled OS X binaries:<br/>
 	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.dmg">openscad-2011.04.dmg</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows binaries:<br/>
