--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@ $ sudo apt-get install openscad
 <li style="padding-bottom:0.5em">Latest pre compiled OS X binaries:<br/>
 	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.dmg">openscad-2011.04.dmg</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows binaries:<br/>
-Not Yet Available. Previous version: 
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2010.05.win32.zip">openscad-2010.05.win32.zip</a>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.win32.zip">openscad-2011.04.win32.zip</a>
+</li>
+<li style="padding-bottom:0.5em">Latest pre compiled Windows installer:<br/>
+	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.04.win32-installer.exe">openscad-2011.04.win32-installer.exe</a>
 </li>
 <li style="padding-bottom:0.5em">Browse current and older releases:<br/>
 	<a href="https://github.com/openscad/openscad/downloads">Direct link to download directory</a></li>
