added openSUSE info

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@ $ sudo apt-get update
 $ sudo apt-get install openscad
 </pre>
 
+<h3>Installing on openSUSE</h3>
+
+OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?package=openscad&project=graphics">openSUSE build service</a>.
+
 <h3>Download Releases</h3>
 <p><ul>
 <li style="padding-bottom:0.5em">Latest source release:<br/>
