Better google link and added youtube link

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@ running.</p>
 <p>We have a mailing list. You can subscribe to the list or browse the list archives <a href="http://rocklinux.net/mailman/listinfo/openscad">here</a>.</p>
 
 <h3>See also</h3>
-<p>Have a look <a href="http://www.google.com/search?q=openscad+-%22Open+CAD%22+-%22Opens+CAD%22">what Google has about OpenSCAD</a>.</p>
+<p>Have a look <a href="http://www.google.com/search?q=%2BOpenSCAD">what Google has on OpenSCAD</a>
+and <a href="http://www.youtube.com/results?search_query=OpenSCAD">the same for YouTube</a>.</p>
 
 <h3>Author</h3>
 <p>OpenSCAD has been written by <a href="http://www.clifford.at/">Clifford Wolf</a> and <a href="mailto:marius@kintel.net">Marius Kintel</a></p>
