Deactivated win32 snapshots, clarified maintainer

--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 <p><ul>
 <li style="padding-bottom:0.5em">Development snapshot OS X binaries:<br/>
 	<a href="http://www.kintel.net/public/openscad-latest.dmg">openscad-latest.dmg</a></li>
-<li style="padding-bottom:0.5em">Development snapshot Win32 binaries:<br/>
-	<a href="http://meta23.net/openscad/">Directory Index</a></li>
+<li style="padding-bottom:0.5em"><strike>Development snapshot Win32 binaries:</strike> No binaries available. If you want to help building Windows snapshots, please get in touch
 <li style="padding-bottom:0.5em">Latest development sources:<br/>
 	<a href="http://github.com/openscad/openscad">Project on github</a></li>
 </ul></p>
@@ -168,8 +167,9 @@ running.</p>
 <h3>See also</h3>
 <p>Have a look <a href="http://www.google.com/search?q=openscad+-%22Open+CAD%22+-%22Opens+CAD%22">what Google has about OpenSCAD</a>.</p>
 
-<h3>Author</h3>
+<h3>Maintenance and Authors</h3>
+<p>OpenSCAD is maintained by <a href="mailto:marius@kintel.net">Marius Kintel</a></p>
+
 <p>OpenSCAD has been written by <a href="http://www.clifford.at/">Clifford Wolf</a> and <a href="mailto:marius@kintel.net">Marius Kintel</a></p>
 
 </body></html>
-
