Added IRC channel

--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@ running.</p>
 <li><a href="http://www.iheartrobotics.com/search/label/OpenSCAD">I Heart Robotics: OpenSCAD</a></li>
 </ul>
 
-<h3>Mailing List</h3>
+<h3>Community</h3>
 <p>We have a mailing list. You can subscribe to the list or browse the list archives <a href="http://rocklinux.net/mailman/listinfo/openscad">here</a>.</p>
+<p>There is an IRC channel: #openscad at irc.freenode.net.</p>
 
 <h3>See also</h3>
 <p>Have a look <a href="http://www.google.com/search?q=%2BOpenSCAD">what Google has on OpenSCAD</a>
