--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 <p><ul>
 <li style="padding-bottom:0.5em">Development snapshot OS X binaries:<br/>
 	<a id="mac-snapshot" href="http://www.kintel.net/public/OpenSCAD-2011.10.04.dmg">OpenSCAD-2011.10.04.dmg</a></li>
-<li style="padding-bottom:0.5em"><strike>Development snapshot Win32 binaries:</strike> No binaries available. If you want to help building Windows snapshots, please get in touch
+<li style="padding-bottom:0.5em">Development snapshot Win32 binaries:<br/>
+	<a id="win-snapshot-zip" href="http://www.onewheelweb.com/static/openscad/OpenSCAD-2011.10.05.zip">OpenSCAD-2011.10.05.zip</a></li>
+	<a id="win-snapshot-exe" href="http://www.onewheelweb.com/static/openscad/OpenSCAD-2011.10.05-Installer.exe">OpenSCAD-2011.10.05-Installer.exe</a></li>
 <li style="padding-bottom:0.5em">Latest development sources:<br/>
 	<a href="http://github.com/openscad/openscad">Project on github</a></li>
 </ul></p>
