added linux development snapshots

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 	<a id="win-snapshot-zip" href="https://github.com/downloads/brad/openscad/OpenSCAD-2012.04.01.zip">OpenSCAD-2012.04.01.zip</a><br/>
 	<a id="win-snapshot-exe" href="https://github.com/downloads/brad/openscad/OpenSCAD-2012.04.01-Installer.exe">OpenSCAD-2012.04.01-Installer.exe</a>
 </li>
+<li style="padding-bottom:0.5em">Development snapshot Linux binaries:<br/>
+	<a id="linux-snapshot-32" href="https://github.com/downloads/openscad/openscad.github.com/openscad-2012.06.15.x86-32.tar.gz">openscad-2012.06.15.x86-32.tar.gz</a><br/>
+	<a id="linux-snapshot-64" href="https://github.com/downloads/openscad/openscad.github.com/openscad-2012.06.15.x86-64.tar.gz">openscad-2012.06.15.x86-64.tar.gz</a>
+</li>
 <li style="padding-bottom:0.5em">Latest development sources:<br/>
 	<a href="http://github.com/openscad/openscad">Project on github</a></li>
 </ul></p>
