Added link to cheatsheet

--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@ running.</p>
 
 <p>This User Manual is work in progress and everyone who is willing to help extending/improving it is very welcome!</p>
 
+<a href="cheatsheet">Cheat Sheet</a></p>
+
 <h3>Other Tutorials</h3>
 
 <ul>
