Installing on Fedora

--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@ $ sudo apt-get update
 $ sudo apt-get install openscad
 </pre>
 
+<h3>Installing on Fedora</h3>
+
+OpenSCAD is available in Fedora 17+ official repositories. So installing OpenSCAD
+on Fedora boils down to running the following command:
+
+<pre style="background-color: #aaa; padding:1em; margin-left:4em; margin-right:4em;">
+# yum install openscad
+</pre>
+
+If you want MCAD library:
+
+<pre style="background-color: #aaa; padding:1em; margin-left:4em; margin-right:4em;">
+# yum install openscad-MCAD
+</pre>
+
 <h3>Installing on openSUSE</h3>
 
 OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?package=openscad&project=graphics">openSUSE build service</a>.
