--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 <li style="padding-bottom:0.5em">Development snapshot OS X binaries:<br/>
 	<a id="mac-snapshot" href="http://www.kintel.net/public/OpenSCAD-2013.01.08.dmg">OpenSCAD-2013.01.08.dmg</a></li>
 <li style="padding-bottom:0.5em">Development snapshot Win32 binaries:<br/>
-	<a id="win-snapshot-zip" href="https://s3.amazonaws.com/openscad/OpenSCAD-2013.01.08.zip">OpenSCAD-2013.01.08.zip</a><br/>
-	<a id="win-snapshot-exe" href="https://s3.amazonaws.com/openscad/OpenSCAD-2013.01.08-Installer.exe">OpenSCAD-2013.01.08-Installer.exe</a>
+	<a id="win-snapshot-zip" href="http://openscad.googlecode.com/files/OpenSCAD-2013.01.08.zip">OpenSCAD-2013.01.08.zip</a><br/>
+	<a id="win-snapshot-exe" href="http://openscad.googlecode.com/files/OpenSCAD-2013.01.08-Installer.exe">OpenSCAD-2013.01.08-Installer.exe</a>
 </li>
 <li style="padding-bottom:0.5em">Development snapshot Linux binaries:<br/>
 	<a id="linux-snapshot-32" href="https://github.com/downloads/openscad/openscad.github.com/openscad-2012.06.15.x86-32.tar.gz">openscad-2012.06.15.x86-32.tar.gz</a><br/>
