--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html><head><meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+<html>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1"/>
+<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
 <title>OpenSCAD - The Programmers Solid 3D CAD Modeller</title>
 <script type="text/javascript">
 /* <![CDATA[ */
