Moved link to Linux development snapshots from github to google code

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 	<a id="win-snapshot-exe" href="http://openscad.googlecode.com/files/OpenSCAD-2013.01.08-Installer.exe">OpenSCAD-2013.01.08-Installer.exe</a>
 </li>
 <li style="padding-bottom:0.5em">Development snapshot Linux binaries:<br/>
-	<a id="linux-snapshot-32" href="https://github.com/downloads/openscad/openscad.github.com/openscad-2012.06.15.x86-32.tar.gz">openscad-2012.06.15.x86-32.tar.gz</a><br/>
-	<a id="linux-snapshot-64" href="https://github.com/downloads/openscad/openscad.github.com/openscad-2012.06.15.x86-64.tar.gz">openscad-2012.06.15.x86-64.tar.gz</a>
+	<a id="linux-snapshot-32" href="https://openscad.googlecode.com/files/openscad-2013.01.09.x86-32.tar.gz">openscad-2013.01.09.x86-32.tar.gz</a><br/>
+	<a id="linux-snapshot-64" href="https://openscad.googlecode.com/files/openscad-2013.01.10.x86-64.tar.gz">openscad-2013.01.10.x86-64.tar.gz</a>
 </li>
 <li style="padding-bottom:0.5em">Latest development sources:<br/>
 	<a href="http://github.com/openscad/openscad">Project on github</a></li>
