Updated release version to 2013.01, incl. Mac binaries

--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 <h3>Download Releases</h3>
 <p><ul>
 <li style="padding-bottom:0.5em">Latest source release:<br/>
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.12.src.tar.gz">openscad-2011.12.src.tar.gz</a></li>
+	<a href="https://openscad.googlecode.com/files/openscad-2013.01.src.tar.gz">openscad-2013.01.src.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Linux x86 binaries:<br/>
 	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.06.linux-x86.tar.gz">openscad-2011.06.linux-x86.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Linux x64 binaries:<br/>
 	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.06.linux-x64.tar.gz">openscad-2011.06.linux-x64.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled OS X binaries:<br/>
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.12.dmg">openscad-2011.12.dmg</a></li>
+	<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.01.dmg">OpenSCAD-2013.01.dmg</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows binaries:<br/>
 	<a href="https://github.com/downloads/brad/openscad/openscad-2011.12.win32.zip">openscad-2011.12.win32.zip</a>
 </li>
@@ -148,7 +148,7 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 
 <p><ul>
 <li style="padding-bottom:0.5em">Development snapshot OS X binaries:<br/>
-	<a id="mac-snapshot" href="https://openscad.googlecode.com/files/OpenSCAD-2013.01.17.dmg">OpenSCAD-2013.01.17.dmg</a></li>
+	<a id="mac-snapshot" href="https://openscad.googlecode.com/files/OpenSCAD-2013.01.dmg">OpenSCAD-2013.01.dmg</a></li>
 <li style="padding-bottom:0.5em">Development snapshot Win32 binaries:<br/>
 	<a id="win-snapshot-zip" href="http://openscad.googlecode.com/files/OpenSCAD-2013.01.08.zip">OpenSCAD-2013.01.08.zip</a><br/>
 	<a id="win-snapshot-exe" href="http://openscad.googlecode.com/files/OpenSCAD-2013.01.08-Installer.exe">OpenSCAD-2013.01.08-Installer.exe</a>
