--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 <p><ul>
 <li style="padding-bottom:0.5em">Latest source release:<br/>
 	<a href="https://openscad.googlecode.com/files/openscad-2013.01.src.tar.gz">openscad-2013.01.src.tar.gz</a></li>
-<li style="padding-bottom:0.5em">Latest pre compiled Linux x86 binaries:<br/>
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.06.linux-x86.tar.gz">openscad-2011.06.linux-x86.tar.gz</a></li>
-<li style="padding-bottom:0.5em">Latest pre compiled Linux x64 binaries:<br/>
-	<a href="https://github.com/downloads/openscad/openscad/openscad-2011.06.linux-x64.tar.gz">openscad-2011.06.linux-x64.tar.gz</a></li>
+<li style="padding-bottom:0.5em">Latest pre compiled Linux x86-32 binaries:<br/>
+	<a href="https://openscad.googlecode.com/files/openscad-2013.01.x86-32.tar.gz">openscad-2013.01.x86-32.tar.gz</a></li>
+<li style="padding-bottom:0.5em">Latest pre compiled Linux x86-64 binaries:<br/>
+	<a href="https://openscad.googlecode.com/files/openscad-2013.01.x86-64.tar.gz">openscad-2013.01.x86-64.tar.gz</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled OS X binaries:<br/>
 	<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.01.dmg">OpenSCAD-2013.01.dmg</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows binaries:<br/>
