--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@ OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?
 <li style="padding-bottom:0.5em">Latest pre compiled OS X binaries:<br/>
 	<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.01.dmg">OpenSCAD-2013.01.dmg</a></li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows binaries:<br/>
-	<a href="https://github.com/downloads/brad/openscad/openscad-2011.12.win32.zip">openscad-2011.12.win32.zip</a>
+	<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.01.zip">OpenSCAD-2013.01.zip</a>
 </li>
 <li style="padding-bottom:0.5em">Latest pre compiled Windows installer:<br/>
-	<a href="https://github.com/downloads/brad/openscad/openscad-2011.12.win32-installer.exe">openscad-2011.12.win32-installer.exe</a>
+	<a href="https://openscad.googlecode.com/files/OpenSCAD-2013.01-Installer.exe">OpenSCAD-2013.01-Installer.exe</a>
 </li>
 <li style="padding-bottom:0.5em">Browse current and older releases:<br/>
 	<a href="https://github.com/openscad/openscad/downloads">Direct link to download directory</a></li>
