OpenSCAD is now in MacPorts

--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@ If you want MCAD library:
 
 OpenSCAD is available from the <a href="https://build.opensuse.org/package/show?package=openscad&project=graphics">openSUSE build service</a>.
 
+<h3>Installing on Mac OS X</h3>
+
+Download the pre-compiled binary listed below or compile it using <a href="http://www.macports.org/">MacPorts</a>:
+
+<pre style="background-color: #aaa; padding:1em; margin-left:4em; margin-right:4em;">
+# sudo port install openscad
+</pre>
+
 <h3>Download Releases</h3>
 <p><ul>
 <li style="padding-bottom:0.5em">Latest source release:<br/>
