--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ Download the pre-compiled binary listed below or compile it using <a href="http:
 <h3>Build dependencies</h3>
 <p>OpenSCAD is using the <a href="http://qt.nokia.com/">Qt4</a>, the <a
 href="http://www.opencsg.org/">OpenCSG library</a> and the <a
-href="http://www.cgal.org/">CGAL library</a>. This libraries are bundled with
-the pre compiled binaries. In addition to this libaries a GNU C compiler, the
+href="http://www.cgal.org/">CGAL library</a>. These libraries are bundled with
+the pre compiled binaries. In addition to this libraries a GNU C compiler, the
 bison parser generator and some other tools are needed for building OpenSCAD
 from the sources. The binary releases include this libraries, so no extra
 software needs to be installed to get the precompiled binary packages
