--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>OpenSCAD - The Programmers Solid 3D CAD Modeller</title>
+	<title>OpenSCAD - Gallery</title>
 
 	<script type="text/javascript">
 	/* <![CDATA[ */
@@ -17,10 +17,10 @@
 	/* ]]> */
 	</script>
 
-	<link href="assets/css/style.css" rel="stylesheet"/>
+	<link href="assets/css/style.css" rel="stylesheet">
   
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-	<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'/>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
@@ -50,8 +50,6 @@
 	var pageHeight = $(window).height();
 	$(document).ready(function() {
 		
-		alert($.browser.version);
-		
 		$('.top').click(function(){$('body').scrollTo($('body'),700,{offset:{top:-20}});});
 		
 		$(".fancybox").fancybox();
@@ -61,33 +59,33 @@
 		
 		$('#sidebar.sticky').parent().css('width',$("#sidebar.sticky").css('width'));
 
-		$('section ul li').prepend("» ");
-		
-		var news, i;
-		
-		$.get('news.html', function(data) {
+		$("a[href^='#']").click(function(e){e.preventDefault(); $('body').scrollTo($(this).attr('href'),1000, {offset:-20}); });
 
-			$html      = $(data)
-			$entries    = $html.find('article section');
+		/*initialize */
+		var id, title, url, image, image_thumb, image_preview, creator_name, creator_url;
+		/*retrieve data from openscad tag*/
+		$.getJSON('inc/thingiverse-recent.json', function(response) {
 
-			i=0;
+			$.each(response, function(key, val) {
+				id = val.id;
+				title = val.name;
+				url = val.public_url;
+				creator_name = val.creator.name;
+				creator_url = val.creator.public_url;
+				image = val.thumbnail;
+				image_thumb = image.replace("thumb_medium", "preview_large");
+				image_preview = image.replace("thumb_medium", "preview_featured");
 
-			$entries.each(function(){
-				$title    = $(this).find('.title').html();
-				$date    = $(this).find('.date').html();
-				$content    = $(this).find('.entry').html();
-				$shortContent = jQuery.trim($content).substring(0, 150).split(" ").slice(0, -1).join(" ") + "...";
-				if(i<3){
-				$('#sidebar ul').append("<li style='padding-bottom:10px;'><strong><small>"+$date+"</small><strong><br/><a href='news.html#"+$(this).attr("id")+"'>"+$title+"</a><br/><small>"+$shortContent+"</small></li>");				
+				if(key<24){
+
+					$("#gallery").append("<div id="+id+" class='gallery-links'><div class='img-container'><a href='"+url+"' target='_blank'><img src='"+image_preview+"'/><h4>"+title+"</h4></a><h5>by <a href='"+creator_url+"' target='_blank'>"+creator_name+"</a></h5></div></a></div>");
+
 				}
-				i++;
+				
 			});
-		}, "html");
-
-		$("a[href^='#']").click(function(e){e.preventDefault(); $('body').scrollTo($(this).attr('href'),1000, {offset:-20}); });		
-
 		});
-		
+			
+	});
 	</script>
 
 </head>
@@ -104,16 +102,16 @@
 		<h1 class="title" style="position:relative;"><span class="green">Open</span>SCAD</h1>
 		<h2 class="subtitle" style="position:relative; left:45px;">The Programmers Solid 3D CAD Modeller</h2>
 	</div>
-	
+
 	<div id="navigation">
 	<div id="navigation-inner">
     <ul class="nav">
-      <li class="current"><a href="index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="news.html">News</a></li>
       <li><a href="downloads.html">Downloads</a></li>
       <li><a href="documentation.html">Documentation</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
+      <li class="current"><a href="gallery.html">Gallery</a></li>
       <li><a href="community.html">Community</a></li>
       <li><a href="https://github.com/openscad/openscad/" target="_blank">GitHub</a></li>
     </ul>
@@ -124,40 +122,19 @@
 <div id="page-content">
 	
 	<div id="sidebar" class="sticky">
-		<h1>Recent News</h1>
+		<h1>Gallery</h1>
 		<ul>
+<!--			<li><a href="#user-manual">Code Examples</a></li>-->
+			<li><a href="#gallery">OpenSCAD on Thingiverse</a></li>
 		</ul>
 	</div>
 	
 	<article>
-
-		<section>
-			<h1><strong><span class="green">Open</span>SCAD</strong> is a software for creating solid 3D CAD objects.</h1>
-			<h1 class="normal">It is free software and available for Linux/UNIX, MS Windows and Mac OS X.</h1>
-
-			<img style="border:1px solid #eee; border-radius:8px; margin:20px 0px 40px 0px;" src="assets/img/screenshot.png"/>
-
-<!--
-			<div style="width:100px; float:left; margin-left:80px; text-align:center;">
-			<h2>Report a Bug</h2>
-			<img src="assets/img/bug.png"/>
-			</div>
--->
-
-			<a href="">
-			<div id="home-download">
-				<div style="position:absolute; top:10px; background:#e5f1d3; height:55px; width:350px; border-radius:12px; border:4px solid #233d00;">
-					<div style="width:250px; position:absolute; top:1px; left:90px;">
-					<h1 style="margin:2px; padding:0px;">Download OpenSCAD</h1>
-					<h4>Version 2.05 Mac OS X | Windows</h4>
-					<h4 style="position:relative; top:12px;">Other Systems and Versions</h4>
-					</div>
-				</div>
-				<div style="position:absolute; background:url('assets/img/download.png'); height:106px; width:101px;"></div>
-			</div>
-			</a>
+		
+		<section id="gallery" class="left">
+			<h1>OpenSCAD on Thingiverse</h1>
 		</section>
-
+	
 	</article>
 
 <div class="clear"></div>
