--- a/index.html
+++ b/index.html
@@ -20,22 +20,9 @@
 	<link href="assets/css/style.css" rel="stylesheet"/>
   
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'/>
-	<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'/>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
-
-	<!-- fancyBox -->
-	<script type="text/javascript" src="assets/js/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-	<link rel="stylesheet" href="assets/js/fancybox/source/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/jquery.fancybox.pack.js?v=2.1.4"></script>
-
-	<link rel="stylesheet" href="assets/js/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5"></script>
-
-	<link rel="stylesheet" href="assets/js/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
 	<!-- One-Page-Nav  -->
 	<script src="assets/js/jquery.scrollTo.js"></script>
@@ -45,18 +32,21 @@
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/waypoints-sticky.min.js"></script>
 
-
 	<script>
 	var pageHeight = $(window).height();
 	$(document).ready(function() {
-		
-		alert($.browser.version);
+
+		var OSName="Unknown OS";
+		if (navigator.appVersion.indexOf("Win")!=-1) { OSName="Windows"; downloadLink = "https://openscad.googlecode.com/files/OpenSCAD-2013.01-Installer.exe";}
+		if (navigator.appVersion.indexOf("Mac")!=-1) { OSName="Mac OS X"; downloadLink = "https://openscad.googlecode.com/files/OpenSCAD-2013.01.dmg"; }
+		if (navigator.appVersion.indexOf("X11")!=-1) { OSName="Linux"; downloadLink = "downloads.html#linux"; }
+		if (navigator.appVersion.indexOf("Linux")!=-1) { OSName="Linux"; downloadLink = "downloads.html#linux"; }
+
+		$("#home-download a#download-link").attr("href",downloadLink);
+		$("#home-download-link h4").append(OSName);
 		
 		$('.top').click(function(){$('body').scrollTo($('body'),700,{offset:{top:-20}});});
-		
-		$(".fancybox").fancybox();
-		$(".gallery a").fancybox();
-		
+				
 		$('.sticky').waypoint('sticky');
 		
 		$('#sidebar.sticky').parent().css('width',$("#sidebar.sticky").css('width'));
@@ -78,7 +68,7 @@
 				$content    = $(this).find('.entry').html();
 				$shortContent = jQuery.trim($content).substring(0, 150).split(" ").slice(0, -1).join(" ") + "...";
 				if(i<3){
-				$('#sidebar ul').append("<li style='padding-bottom:10px;'><strong><small>"+$date+"</small><strong><br/><a href='news.html#"+$(this).attr("id")+"'>"+$title+"</a><br/><small>"+$shortContent+"</small></li>");				
+				$('#sidebar ul').append("<li style='padding-bottom:10px;'><strong><small>"+$date+"</small><strong><br/><a class='underline' href='news.html#"+$(this).attr("id")+"'>"+$title+"</a><br/><small>"+$shortContent+"</small></li>");				
 				}
 				i++;
 			});
@@ -135,7 +125,7 @@
 			<h1><strong><span class="green">Open</span>SCAD</strong> is a software for creating solid 3D CAD objects.</h1>
 			<h1 class="normal">It is free software and available for Linux/UNIX, MS Windows and Mac OS X.</h1>
 
-			<img style="border:1px solid #eee; border-radius:8px; margin:20px 0px 40px 0px;" src="assets/img/screenshot.png"/>
+			<img style="border:1px solid #eee; border-radius:8px; margin:20px 0px 40px 0px;" src="assets/img/screenshot.gif"/>
 
 <!--
 			<div style="width:100px; float:left; margin-left:80px; text-align:center;">
@@ -144,18 +134,19 @@
 			</div>
 -->
 
-			<a href="">
+
 			<div id="home-download">
-				<div style="position:absolute; top:10px; background:#e5f1d3; height:55px; width:350px; border-radius:12px; border:4px solid #233d00;">
+				<a id="download-link" href="downloads.html">
+				<div id="home-download-link">
 					<div style="width:250px; position:absolute; top:1px; left:90px;">
 					<h1 style="margin:2px; padding:0px;">Download OpenSCAD</h1>
-					<h4>Version 2.05 Mac OS X | Windows</h4>
-					<h4 style="position:relative; top:12px;">Other Systems and Versions</h4>
+					<h4>Version 2.05 </h4>
 					</div>
-				</div>
-				<div style="position:absolute; background:url('assets/img/download.png'); height:106px; width:101px;"></div>
+				<div id="home-download-logo"></div>
 			</div>
 			</a>
+				<h4 style="position:absolute; left:135px; bottom:35px;"><a href="downloads.html#other-systems">Other Systems and Versions</a></h4>
+			</div>
 		</section>
 
 	</article>
