--- a/documentation.html
+++ b/documentation.html
@@ -25,18 +25,6 @@
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
 
-	<!-- fancyBox -->
-	<script type="text/javascript" src="assets/js/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-	<link rel="stylesheet" href="assets/js/fancybox/source/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/jquery.fancybox.pack.js?v=2.1.4"></script>
-
-	<link rel="stylesheet" href="assets/js/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5"></script>
-
-	<link rel="stylesheet" href="assets/js/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
-
 	<!-- One-Page-Nav  -->
 	<script src="assets/js/jquery.scrollTo.js"></script>
 	<script src="assets/js/jquery.nav.js"></script>
@@ -46,55 +34,8 @@
 	<script src="assets/js/waypoints-sticky.min.js"></script>
 
 
-	<script>
-	var pageHeight = $(window).height();
-	$(document).ready(function() {
-		
-		
-		$('.top').click(function(){$('body').scrollTo($('body'),700,{offset:{top:-20}});});
-
-		$(".fancybox").fancybox();
-		$(".gallery a").fancybox();
-		
-		$('.sticky').waypoint('sticky');
-		
-		$('#sidebar.sticky').parent().css('width',$("#sidebar.sticky").css('width'));
-
-		/*initialize */
-		var playlist_id, playlist_title, playlist_thumb, video_id, video_title, video_frame;
-		/*retrieve playlist data from openscad user*/
-		$.getJSON('https://gdata.youtube.com/feeds/api/users/openscad/playlists?v=2&alt=jsonc', function(response) {
-			$.each(response.data.items, function(key, val) {
-				var playlist_id = val.id;
-				/*retrieve data from single playlist*/
-				$.getJSON('https://gdata.youtube.com/feeds/api/playlists/'+playlist_id+'?v=2&alt=jsonc', function(response) {
-					playlist_title = response.data.title;
-					playlist_thumb = response.data.thumbnail.hqDefault;
-
-					$("#tutorials-video").append("<div id="+playlist_id+" class='tutorial-links multi'><div class='img-container'><img src='"+playlist_thumb+"' width='320' height='200'/></div><div class='text-container'><h2>"+playlist_title+"</h2></div></div>");
-					/*append video titles*/
-				  $.each(response.data.items, function(key, val) {
-						video_id = val.video.id;
-						video_title = val.video.title;
-						$("#"+playlist_id+" .text-container").append("<h3><span class='video_link link' id='"+video_id+"'>"+video_title+"</span></h3>");
-				  });
-						
-					/*display video on click*/
-					$(".video_link").click(function(){
-						video_frame = '<iframe width="320" height="200" src="http://www.youtube.com/embed/'+$(this).attr("id")+'" frameborder="0" allowfullscreen></iframe>';
-						$(this).parent().parent().parent().find(".img-container").html(video_frame);
-						$(this).parent().parent().find(".current").removeClass("current");
-						$(this).addClass("current");
-					});
-				});
-			});			
-		});
-
-		$("a[href^='#']").click(function(e){e.preventDefault(); $('body').scrollTo($(this).attr('href'),1000, {offset:-20}); });
-
-	});
-	</script>
-	
+	<script src="assets/js/header.js"></script>
+	<script src="assets/js/documentation.js"></script>	
 
 </head>
 <body>
