--- a/downloads.html
+++ b/downloads.html
@@ -5,22 +5,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>OpenSCAD - Downloads</title>
 
-	<script type="text/javascript">
-	/* <![CDATA[ */
-	    (function() {
-	        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
-	        s.type = 'text/javascript';
-	        s.async = true;
-	        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
-	        t.parentNode.insertBefore(s, t);
-	    })();
-	/* ]]> */
-	</script>
-
 	<link href="assets/css/style.css" rel="stylesheet">
   
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
@@ -33,23 +20,7 @@
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/waypoints-sticky.min.js"></script>
 
-
-	<script>
-	var pageHeight = $(window).height();
-	$(document).ready(function() {
-		
-		$('.top').click(function(){$('body').scrollTo($('body'),700,{offset:{top:-20}});});
-		
-		$(".fancybox").fancybox();
-		$(".gallery a").fancybox();
-		
-		$('.sticky').waypoint('sticky');
-		
-		$('#sidebar.sticky').parent().css('width',$("#sidebar.sticky").css('width'));
-
-		$("a[href^='#']").click(function(e){e.preventDefault(); $('body').scrollTo($(this).attr('href'),1000, {offset:-20}); });
-	});
-	</script>
+	<script src="assets/js/header.js"></script>
 
 </head>
 <body>
