--- a/gallery.html
+++ b/gallery.html
@@ -5,37 +5,13 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>OpenSCAD - Gallery</title>
 
-	<script type="text/javascript">
-	/* <![CDATA[ */
-	    (function() {
-	        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
-	        s.type = 'text/javascript';
-	        s.async = true;
-	        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
-	        t.parentNode.insertBefore(s, t);
-	    })();
-	/* ]]> */
-	</script>
-
 	<link href="assets/css/style.css" rel="stylesheet">
   
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
 
-	<!-- fancyBox -->
-	<script type="text/javascript" src="assets/js/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-	<link rel="stylesheet" href="assets/js/fancybox/source/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/jquery.fancybox.pack.js?v=2.1.4"></script>
-
-	<link rel="stylesheet" href="assets/js/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5"></script>
-
-	<link rel="stylesheet" href="assets/js/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-	<script type="text/javascript" src="assets/js/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
 
 	<!-- One-Page-Nav  -->
 	<script src="assets/js/jquery.scrollTo.js"></script>
@@ -45,48 +21,8 @@
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/waypoints-sticky.min.js"></script>
 
-
-	<script>
-	var pageHeight = $(window).height();
-	$(document).ready(function() {
-		
-		$('.top').click(function(){$('body').scrollTo($('body'),700,{offset:{top:-20}});});
-		
-		$(".fancybox").fancybox();
-		$(".gallery a").fancybox();
-		
-		$('.sticky').waypoint('sticky');
-		
-		$('#sidebar.sticky').parent().css('width',$("#sidebar.sticky").css('width'));
-
-		$("a[href^='#']").click(function(e){e.preventDefault(); $('body').scrollTo($(this).attr('href'),1000, {offset:-20}); });
-
-		/*initialize */
-		var id, title, url, image, image_thumb, image_preview, creator_name, creator_url;
-		/*retrieve data from openscad tag*/
-		$.getJSON('inc/thingiverse-recent.json', function(response) {
-
-			$.each(response, function(key, val) {
-				id = val.id;
-				title = val.name;
-				url = val.public_url;
-				creator_name = val.creator.name;
-				creator_url = val.creator.public_url;
-				image = val.thumbnail;
-				image_thumb = image.replace("thumb_medium", "preview_large");
-				image_preview = image.replace("thumb_medium", "preview_featured");
-
-				if(key<24){
-
-					$("#gallery").append("<div id="+id+" class='gallery-links'><div class='img-container'><a href='"+url+"' target='_blank'><img src='"+image_preview+"'/><h4>"+title+"</h4></a><h5>by <a href='"+creator_url+"' target='_blank'>"+creator_name+"</a></h5></div></a></div>");
-
-				}
-				
-			});
-		});
-			
-	});
-	</script>
+	<script src="assets/js/gallery.js"></script>
+	<script src="assets/js/header.js"></script>
 
 </head>
 <body>
