Fixed download button text

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 				<div id="home-download-link">
 					<div style="width:250px; position:absolute; top:1px; left:90px;">
 					<h1 style="margin:2px; padding:0px;">Download OpenSCAD</h1>
-					<h4>Version 2.05 </h4>
+					<h4>Version 2013.01 </h4>
 					</div>
 				<div id="home-download-logo"></div>
 			</div>
 			</a>
-				<h4 style="position:absolute; left:135px; bottom:35px;"><a href="downloads.html#other-systems">Other Systems and Versions</a></h4>
+				<h4 style="position:absolute; left:135px; bottom:35px;"><a href="downloads.html">Other OSs and Versions</a></h4>
 			</div>
 		</section>
 
